--- a/Koha/Plugin/Tamil/Mirabel/titres.tt
+++ b/Koha/Plugin/Tamil/Mirabel/titres.tt
@@ -6,31 +6,31 @@
    Ceci est la liste de mes titres gérés dans Mir@bel en tant que partenaire. 
  </p>
  [% FOREACH t IN titres %]
-  <h3>[% t.titre %]</h3>
+  <h3>[% t.titre | html %]</h3>
   <p>
-   [% t.editeurs.join(' &bullet; ') %] ;
-   [% t.periodicite %] ;
+   [% t.editeurs.join(' &bullet; ') | html %] ;
+   [% t.periodicite | html %] ;
    [% FOREACH i IN t.issns %]
-     [% i.issn %] ([% i.suport %])[% ", " UNLESS loop.last %]
+     [% i.issn | html %] ([% i.suport | html %])[% ", " UNLESS loop.last %]
    [% END %]
    ;
-   [% t.datedebut %] - [% t.datefin %]
+   [% t.datedebut | html %] - [% t.datefin | html %]
   </p>
   <p>
    VOIR :
-   <a href="[% t.url %]">Éditeur</a>
+   <a href="[% t.url | html %]">Éditeur</a>
    |
-   <a href="https://reseau-mirabel.info/revue/[% t.revueid %]">Mirabel</a>
+   <a href="https://reseau-mirabel.info/revue/[% t.revueid | html %]">Mirabel</a>
    |
-   <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=[% t.identifiantpartenaire %]">Koha</a>
+   <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=[% t.identifiantpartenaire | html %]">Koha</a>
   </p>
   <ul>
    [% FOREACH a IN t.acces %]
     <li>
-     <a href="[% a.url %]">[% a.ressource %]</a>,
-     [% a.numerodebut %]-[% a.numerofin %],
-     [% a.datedebut %]-[% a.datefin %],
-     [% a.contenu %] ([% a.diffusion %])
+     <a href="[% a.url | html %]">[% a.ressource | html %]</a>,
+     [% a.numerodebut | html %]-[% a.numerofin | html %],
+     [% a.datedebut | html %]-[% a.datefin | html %],
+     [% a.contenu | html %] ([% a.diffusion | html %])
     </li>
    [% END %]
   </ul>
